Added new endpoint for fetching case statuses by partyId. Some refactoring of the controller classes to reduce code duplication. (#145)
